--- a/source/_template/index.2.html
+++ b/source/_template/index.2.html
@@ -6,20 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
     <meta name="description" content="">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>%%TITLE%% - Gaea Documentation - QuadSpinner</title>
     <link rel="shortcut icon" href="/Gaea-32.png" type="image/png">
-    <link rel="stylesheet" href="/assets/v3/bootstrap.css">
-    <link rel="stylesheet" href="/assets/vendor/fonts/ionicons.css">
-    <link rel="stylesheet" href="/assets/v3/bootstrap-toc.css">
-    <link rel="stylesheet" href="/assets/v3/styles.css">
+    <link rel="stylesheet" href="/assets/fixed/bundle.min.css">
+    <link rel="stylesheet" href="/assets/custom/styles.css">
     <link rel="stylesheet" href="/assets/custom/custom.css">
-    <link rel="stylesheet" href="/assets/custom/vs2015.css">
-    <link rel="stylesheet" href="/assets/custom/toggle.css">
-    <link rel="stylesheet" href="/assets/custom/jquery.fancybox.min.css">
-    <link rel="stylesheet" id="cssx" type="text/css" href="/">
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 </head>
 
 <body data-spy="scroll" data-target="#toc">
@@ -31,7 +23,7 @@
                 <nav role="navigation" aria-label="Top Level">
                     <div class="container">
                         <div class="nav navbar-header">
-                            <a class="navbar-brand" href="https://docs.quadspinner.com/">
+                            <a class="navbar-brand" href="/">
                                 <span itemprop="name">QuadSpinner Gaea</span>
                             </a>
                             <button type="button" class="navbar-toggle" role="navigation" data-toggle="collapse"
@@ -124,22 +116,9 @@
         </div>
     </footer>
     <!-- / Layout wrapper -->
-    <!-- Core scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
-
-
-    <!-- Main script -->
-
-    <script src="https://cdn.rawgit.com/afeld/bootstrap-toc/v0.4.1/dist/bootstrap-toc.min.js"></script>
-    <script src="/assets/js/highlight.pack.js"></script>
-    <script src="/assets/js/medium-zoom.min.js"></script>
+<!-- Main script -->
+    <script src="/assets/libs/bundle.min.js"></script>
     <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/lunr.min.js"></script>
-    <script src="/assets/js/hilitor.js"></script>
-    <script src="/assets/js/jquery.fancybox.min.js"></script>
     <script src="/assets/js/search.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
@@ -151,7 +130,6 @@
             mediumZoom('.img-fluid', { margin: 36, background: '#333333' });
         });
     </script>
-
 </body>
 
 </html>
